<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="splash_title">Lets Connect</string>
    <string name="username">Username</string>
    <string name="title_stream">Lets Connect</string>
    <string name="password">Password</string>
    <string name="signin_button">SIGN-IN</string>
    <string name="register">No account yet? Create one</string>
    <string name="forgot">Forgot password? Click here</string>
    <string name="google_sign_in">Sign In Using Google</string>
    <string name="forgot_mailId">Mail id</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_activity_title">Recover Password</string>
    <string name="create_activity_title">New User - Sign Up</string>
    <string name="forgot_signin">Already a Member? Sign In</string>
    <string name="create_name_hint">Name</string>
    <string name="create_fname_hint">Father\'s Name</string>
    <string name="create_mname_hint">Mother\'s Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_dob_title">Date Of Birth</string>
    <string name="create_address_hint">Address</string>
    <string name="create_telephone_hint">Phone</string>
    <string name="create_email_hint">Email id</string>
    <string name="create_submit_title">SUBMIT</string>
    <string name="success">SUCCESS</string>
    <string name="success_toast">Account Created Successfully...</string>
    <string name="fail_toast">SignUp Failed</string>
    <string name="unsuccessful">SignUp Failed...Try Again</string>
    <string name="successful">Account Created Successfully </string>
    <string name="auth_failed">Data Invalid...Try Again</string>
    <string name="auth_success">Login Successful...Redirecting</string>
    <string name="title_activity_home">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signout">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_contact">Name or Phone</string>
    <string name="profile_fragment_title">Profile- Edit</string>
    <string name="events_fragment_title">Events</string>
    <string name="events_hint">Enter Message</string>

</resources>
