<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/keyline_left_1"
            android:layout_marginRight="@dimen/keyline_right">


            <TextView
                android:id="@+id/textView_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/title_stream"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_head" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_head">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/username"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_holder">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signInbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/password_holder"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/signin_button"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/google_signin_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signInbutton"
                android:layout_margin="@dimen/margin_for_signin_text"
                android:gravity="center"
                android:text="@string/google_sign_in"
                android:textColor="@color/colorWhite" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_below="@+id/google_signin_tag" />

            <TextView
                android:id="@+id/createClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/google_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_forgot" />

            <TextView
                android:id="@+id/forgotClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createClick"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/forgot"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_forgot" />

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>